<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ibash</string>
    <string name="action_settings">Settings</string>

    <string name="update_news">Version 3.1 (11):\n\nAndroid 8.1\n\nSearch by id with #id1,id2,&#8230;\n\nSelect the color of the text in the settings (grey - black)</string>
    
    <!-- ListView_Extention Buttons + Messages -->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="share">Share</string>
    <string name="add_to_favi">Add to favourites</string>
    <string name="remove_from_favi">Remove from favourites</string>
    <string name="context_header">Choose action:</string>
    <string name="shared_via">-via ibash by codewing.de</string>
    
    <string name="database_added">Successfully added to your favourites list!</string>
   	<string name="database_already_added">The quote is already in the favourites list!</string>
   	<string name="rating_success">You have successfully rated this quote!</string>
   	<string name="already_rated">You have already rated this quote!</string>

    <!-- SpashActivity -->
    <string name="splash_new_features"><u>new features:</u></string>
    <string name="splash_new_features_list">- 100% new code! \n- not showing the white loading screen</string>
    <string name="splash_start">Start</string>
    <string name="splash_quit">Quit</string>
    <string name="splash_connect">Connect</string>
    <string name="no_connection">No connection to the internet</string>
    
    <!-- FragmentBuilder -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <!-- Menu Items -->
    <string name="menu_title_quotes">Quotes</string>
    <string name="menu_title_other">Other</string>
    <string name="menu_new">New</string>
    <string name="menu_best">Best</string>
    <string name="menu_random">Random</string>
    <string name="menu_search">Search</string>
    <string name="menu_queue">Queue</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_quit">Quit</string>
    
    <!-- Menu Item - Subtitles -->
    <string name="menu_new_sub">the latest quotes</string>
    <string name="menu_best_sub">the most awesome quotes</string>
    <string name="menu_random_sub">random fun</string>
    <string name="menu_search_sub">looking for quotes?</string>
    <string name="menu_queue_sub">1337 or fail?</string>
    <string name="menu_favourites_sub">quotes you like</string>
    <string name="menu_settings_sub">change some things</string>
    <string name="menu_about_sub">wtf? who is codewing?!</string>
    <string name="menu_quit_sub">why does this even exist?!</string>

    <!-- Buttons/Headlines/Default Values -->
    <string name="button_previous">previous</string>
    <string name="button_next">next</string>
    <string name="button_reload">(re)load</string>
    <string name="button_reroll">reroll</string>
    <string name="button_search">search</string>
    <string name="search_term">searchterm or #quotenumber</string>
    <string name="one">1</string>
    <string name="headline_comments">comments:</string>
    
    <!-- Preferences -->
    <string name="pref_title_listanditem">list and item settings</string>
    <string name="pref_title_numberofitems">Number of Quotes</string> 
    <string name="pref_summary_numberofitems">Change the amout of items displayed per page\nNote: This will decrease the loading speed (ty cpt. obvious)</string>
    <string name="pref_title_colorize">Colorize rating</string> 
    <string name="pref_title_pageid">Save pagenumber</string> 
    <string name="pref_summary_pageid">Save current pagenumber for next start</string>
    <string name="pref_title_grey_text">Grey text</string>
    <string name="pref_summary_grey_text">If selected the text of the quotes and comments is grey, otherwise black</string>
    
    <string name="pref_title_misc">miscellaneous</string>
    <string name="pref_title_autostart">Autostart</string>
    <string name="pref_title_home_fragment">Home</string>
    <string name="pref_summary_home_fragment">Select the home view of the app</string>
    <string name="pref_summary_autostart">Start the app without clicking on connect</string>
    
    <!-- About -->
    <string name="about_text">iBash for Android - Version INSERT_VERSION \nApp by Winfried Baumann \nwww.codewing.de \n</string>
    <string name="about_thanks">Thanks to: \n- Semjon K. (Webmaster of ibash.de) \n- Selina F. (ideas for the design) \n- Kevin S. (beta tester) \n- all my friends \n- you because you use this app \nTHANKS!\n</string>
    <string name="about_follow">Follow me on</string>
    <string name="no_items_queue">no items in the queue</string>
    
    <!-- Widget -->
    <string name="widget_openApp">open app</string>
    <string name="widget_loading">loading</string>
    <string name="pref_title_favi_desc">Sort favourites descending</string>
    <string name="pref_summary_favi_desc">The favourites are sorted by the date added (Asc/Desc)</string>

</resources>
