<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/pref_title_listanditem"
        android:key="pref_key_listanditem_settings">

        <EditTextPreference 
            android:key="pref_key_numberofitems"
            android:summary="@string/pref_summary_numberofitems"
            android:title="@string/pref_title_numberofitems" 
            android:inputType="number"
            android:defaultValue="10"/>

         <CheckBoxPreference
            android:key="pref_key_colorizerating"
            android:title="@string/pref_title_colorize"
            android:defaultValue="true" />
         
         <CheckBoxPreference
            android:key="pref_key_savepageid"
            android:title="@string/pref_title_pageid"
            android:summary="@string/pref_summary_pageid"
            android:defaultValue="true" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/pref_title_misc"
        android:key="pref_key_misc_settings">   
        <CheckBoxPreference
            android:key="pref_key_autostart"
            android:title="@string/pref_title_autostart"
            android:defaultValue="true" />
     </PreferenceCategory>
     
    	
</PreferenceScreen>
