<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@drawable/listitem_header_2" >

        <Button
            android:id="@+id/button_widget_reload"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="@string/button_reload"
            android:textColor="@color/background_holo_light"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView_widget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/menu_random"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/background_holo_light" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

    <TextView
        android:id="@+id/empty_List_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/widget_loading"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>